# Graphics

./: CMakeLists.txt  README.md  SDLauxiliary.h  model_triangle.h  skeleton.cpp  skeleton.h
